# guile-cdr255

./: .gitignore  AUTHORS  Changelog  Changelog.md  DEPENDENCIES.txt  HACKING  Makefile.am  NEWS  README.md  README.org  bootstrap  cast.sh  configure.ac  guix.scm  hall.scm  incant.sh  pre-inst-env.in
build-aux/: test-driver.scm
cdr255/: combinators.scm  combinators.scm.in  gamelib.scm.in  gametools.scm  userlib.scm  userlib.scm.in
doc/: cdr255.texi  guile-cdr255.texi  procedure-types.texi
m4/: tar-edited.m4
scripts/: set-gitconfig.in
tests/: tests.scm
